--- a/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
+++ b/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
@@ -1234,7 +1234,9 @@
   {
    "cell_type": "markdown",
    "id": "e1502f94-1b93-420e-98ae-29d16f20b5de",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# ------------------------------LOGISTIC REGRESSION------------------------------"
    ]
@@ -1243,7 +1245,13 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "fbaaeabf-8177-4688-ac16-1866a558c4f1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1414,7 +1422,12 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "013a99fc-c7e4-47fd-88e0-23ea7e3b98f3",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
