--- a/Updated/Emotional Monitoring (Classification)/Jupyter Files/Classification.ipynb
+++ b/Updated/Emotional Monitoring (Classification)/Jupyter Files/Classification.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "17b0ca73-1ca1-4558-a1f2-38f2aa3866ca",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## LIBRARIES"
    ]
@@ -55,7 +57,9 @@
   {
    "cell_type": "markdown",
    "id": "be28a41f-7b83-4457-b3d7-02dc7eef2350",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## FILE SETUP AND PREPROCESS"
    ]
@@ -225,7 +229,9 @@
   {
    "cell_type": "markdown",
    "id": "2651d9b9-1d6e-4485-9cfd-4f6260c7ae29",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# ------------------------------TREE MODEL------------------------------"
    ]
@@ -638,7 +644,9 @@
   {
    "cell_type": "markdown",
    "id": "02dc015c-65ac-4dd2-ab6f-6d97fe27be1c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# ------------------------------SVM------------------------------"
    ]
