--- a/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
+++ b/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
@@ -3,16 +3,14 @@
   {
    "cell_type": "markdown",
    "id": "9a56292f-5c86-467d-98b4-ffc062f52e74",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## LIBRARIES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "d23a1197-9be2-405b-ba3e-2f211c87a96b",
    "metadata": {},
    "outputs": [],
@@ -72,11 +70,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "28799dce-38d2-4464-a548-33a582cd7c2a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# PRERPOCESS IMAGE\n",
@@ -131,8 +125,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     },
     "scrolled": true
    },
@@ -1189,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "id": "fdd0778a-bd0a-48b9-b400-d3e0b4311ee8",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1191,8 @@
      "output_type": "stream",
      "text": [
       "true_labels 290\n",
-      "y_pred_cv 290\n"
+      "Normal count    :  145\n",
+      "Pneumonia count :  145\n"
      ]
     }
    ],
@@ -1210,16 +1204,20 @@
     "# ALL IMAGE FILE PATH AND LABELS\n",
     "image_paths = []\n",
     "labels = []\n",
+    "normal_count = 0\n",
+    "pneumonia_count = 0\n",
     "\n",
     "# NORMAL images\n",
     "for img_file in os.listdir(normal_folder):\n",
     "    image_paths.append(os.path.join(normal_folder, img_file))\n",
     "    labels.append(\"NORMAL\")\n",
+    "    normal_count += 1\n",
     "\n",
     "# PNEUMONIA images\n",
     "for img_file in os.listdir(pneumonia_folder):\n",
     "    image_paths.append(os.path.join(pneumonia_folder, img_file))\n",
     "    labels.append(\"PNEUMONIA\")\n",
+    "    pneumonia_count += 1\n",
     "\n",
     "# TURN TO NUMPY ARRAY\n",
     "true_labels = np.array(labels)\n",
@@ -1227,7 +1225,8 @@
     "\n",
     "\n",
     "print(\"true_labels\", len(true_labels))\n",
-    "print(\"y_pred_cv\", len(y_pred_cv))\n",
+    "print(\"Normal count    : \", normal_count)\n",
+    "print(\"Pneumonia count : \", pneumonia_count)\n",
     "#******************************************IMAGE VIEWER SETUP******************************************#"
    ]
   },
@@ -1412,11 +1411,7 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "013a99fc-c7e4-47fd-88e0-23ea7e3b98f3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1582,7 +1577,9 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "ae47afb4-68e4-4659-ad47-6c6819e33678",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1720,6 +1717,14 @@
     "plt.show()\n",
     "#******************************************IMAGE VIEWER******************************************"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0883559-9e48-4b6b-b386-db25add34852",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
