--- a/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
+++ b/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d23a1197-9be2-405b-ba3e-2f211c87a96b",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6e17d41b-9498-4b03-bf7a-0fc200f21294",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ebf7ccbd-baaa-47ac-8e5e-2f72c071d7c0",
    "metadata": {},
    "outputs": [],
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "fdd0778a-bd0a-48b9-b400-d3e0b4311ee8",
    "metadata": {},
    "outputs": [
@@ -1231,7 +1231,9 @@
   {
    "cell_type": "markdown",
    "id": "e1502f94-1b93-420e-98ae-29d16f20b5de",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# ------------------------------LOGISTIC REGRESSION------------------------------"
    ]
@@ -1407,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "013a99fc-c7e4-47fd-88e0-23ea7e3b98f3",
    "metadata": {},
    "outputs": [
