--- a/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
+++ b/Updated/Pneumonia Detection (Image Classification)/Jupyter Files/Pneumonia Detection.ipynb
@@ -1091,7 +1091,9 @@
   {
    "cell_type": "markdown",
    "id": "782ed4b0-550c-43e1-96d9-c62f01fe01c8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## IMAGE EMBEDDED FILE AND PREPROCESSING"
    ]
@@ -1233,7 +1235,9 @@
   {
    "cell_type": "markdown",
    "id": "e1502f94-1b93-420e-98ae-29d16f20b5de",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# ------------------------------LOGISTIC REGRESSION------------------------------"
    ]
